--- a/index.html
+++ b/index.html
@@ -8,55 +8,115 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+
   <title>DTC</title>
+
+  <link rel="stylesheet" href="Resources/css/styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chonburi">
+  <link rel="icon" href="Resources/images/Sahr-Sitie-Logo Asset 5@2x.png">
 </head>
 
 <body>
-  <h1 class="display-3"></h1>
-  <div class="container">
-    <div class="row">
-      <div class="display"></div>
+  <div class="container-fluid app-layout">
+    <!--DISPLAY LAYOUT-->
+    <div class="container-fluid tips">
+      <div class="row align-items-start">
+        <div class="display"></div>
 
-      <div class="payment">
-        <div class="price">Amount: <span></span></div>
-        <div class="tpt">Tip: <span></span></div>
-        <div class="tot">Total: <span></span></div>
-
+        <div class="payment">
+          <div class="price">Amount: <span></span></div>
+          <div class="tpt">Tip: <span></span></div>
+          <div class="tot">Total: <span></span></div>
+        </div>
       </div>
-
-      <div class="tips">
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">10%</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">15%</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">18%</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">20%</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">22%</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12" id="clear">C</button>
+      <!--TIPS LAYOUT-->
+      <div class="row align-items-start">
+        <div class="col">
+          10%
+        </div>
+        <div class="col">
+          15%
+        </div>
+        <div class="col">
+          18%
+        </div>
       </div>
-
-      <div class="numbers">
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">7</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12"">8</button>
-        <button class=" col-sm-4 col-md-6 col-lg-8 col-xlg-12">9</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">4</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">5</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">6</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">1</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">2</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">3</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12">0</button>
-        <button class="col-sm-4 col-md-6 col-lg-8 col-xlg-12"">.</button>
-        <button class=" col-sm-4 col-md-6 col-lg-8 col-xlg-12" id="ent">Enter</button>
+      <div class="row align-items-start">
+        <div class="col">
+          20%
+        </div>
+        <div class="col">
+          22%
+        </div>
+        <div class="col" id="clear">
+          C
+        </div>
+      </div>
+    </div>
+    <!--NUMBER KEYPAD LAYOUT-->
+    <div class="container-fluid numbers">
+      <div class="row align-items-start">
+        <div class="col">
+          7
+        </div>
+        <div class="col">
+          8
+        </div>
+        <div class="col">
+          9
+        </div>
+      </div>
+      <div class="row align-items-start">
+        <div class="col">
+          4
+        </div>
+        <div class="col">
+          5
+        </div>
+        <div class="col">
+          6
+        </div>
+      </div>
+      <div class="row align-items-start">
+        <div class="col">
+          1
+        </div>
+        <div class="col">
+          2
+        </div>
+        <div class="col">
+          3
+        </div>
+      </div>
+      <div class="row align-items-start">
+        <div class="col">
+          0
+        </div>
+        <div class="col">
+          .
+        </div>
+        <div class="col" id="ent">
+          ENT
+        </div>
       </div>
     </div>
   </div>
+  <footer class="legal_statements fixed-bottom">
+    <div class="container">
+      <p class="copywrite"> &copy 2020 - DinoSahr Design </p>
+    </div>
+    <hr>
+  </footer>
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+
+  <script src="https://kit.fontawesome.com/8308b68146.js" crossorigin="anonymous"></script>
+  <script src="Resources/js/script.js"></script>
 </body>
 
 </html>
