--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <script src="https://kit.fontawesome.com/8308b68146.js" crossorigin="anonymous"></script>
-  <script src="Resources/js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
