--- a/index.html
+++ b/index.html
@@ -18,86 +18,43 @@
 
 <body>
   <div class="container-fluid app-layout">
-    <!--DISPLAY LAYOUT-->
-    <div class="container-fluid tips">
-      <div class="row align-items-start">
+    <!--CONSOLE LAYOUT -->
+    <div class="container-fluid">
+      <div class="console">
         <div class="display"></div>
-
+        <hr>
         <div class="payment">
           <div class="price">Amount: <span></span></div>
           <div class="tpt">Tip: <span></span></div>
           <div class="tot">Total: <span></span></div>
         </div>
-      </div>
-      <!--TIPS LAYOUT-->
-      <div class="row align-items-start">
-        <div class="col">
-          10%
-        </div>
-        <div class="col">
-          15%
-        </div>
-        <div class="col">
-          18%
-        </div>
-      </div>
-      <div class="row align-items-start">
-        <div class="col">
-          20%
-        </div>
-        <div class="col">
-          22%
-        </div>
-        <div class="col" id="clear">
-          C
-        </div>
+        <hr>
       </div>
     </div>
-    <!--NUMBER KEYPAD LAYOUT-->
-    <div class="container-fluid numbers">
-      <div class="row align-items-start">
-        <div class="col">
-          7
-        </div>
-        <div class="col">
-          8
-        </div>
-        <div class="col">
-          9
-        </div>
+    <div class="container-fluid">
+      <!-- TIP LAYOUT-->
+      <div class="tips">
+        <div class="tip-key-pad">10%</div>
+        <div class="tip-key-pad">15%</div>
+        <div class="tip-key-pad">18%</div>
+        <div class="tip-key-pad">20%</div>
+        <div class="tip-key-pad">22%</div>
+        <div class="tip-key-pad" id="clear">C</div>
       </div>
-      <div class="row align-items-start">
-        <div class="col">
-          4
-        </div>
-        <div class="col">
-          5
-        </div>
-        <div class="col">
-          6
-        </div>
-      </div>
-      <div class="row align-items-start">
-        <div class="col">
-          1
-        </div>
-        <div class="col">
-          2
-        </div>
-        <div class="col">
-          3
-        </div>
-      </div>
-      <div class="row align-items-start">
-        <div class="col">
-          0
-        </div>
-        <div class="col">
-          .
-        </div>
-        <div class="col" id="ent">
-          ENT
-        </div>
+      <!--NUMBER PAD LAYOUT -->
+      <div class="numbers">
+        <div class="number-key-pad">7</div>
+        <div class="number-key-pad">8</div>
+        <div class="number-key-pad">9</div>
+        <div class="number-key-pad">4</div>
+        <div class="number-key-pad">5</div>
+        <div class="number-key-pad">6</div>
+        <div class="number-key-pad">1</div>
+        <div class="number-key-pad">2</div>
+        <div class="number-key-pad">3</div>
+        <div class="number-key-pad">0</div>
+        <div class="number-key-pad">.</div>
+        <div class="number-key-pad" id="ent">ENT</div>
       </div>
     </div>
   </div>
@@ -116,7 +73,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <script src="https://kit.fontawesome.com/8308b68146.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <script src="Resources/js/script.js"></script>
 </body>
 
 </html>
